Fixed agenda timeline z-index bug

--- a/src/app/common/vendor.scss
+++ b/src/app/common/vendor.scss
@@ -45,3 +45,7 @@
 
 // Angular Timeline
 @import "../../bower_components/angular-timeline/src/angular-timeline";
+
+.timeline > li > .timeline-badge {
+  z-index: 1;
+}
